<resources>
    <string name="app_name">ImageProject</string>
    <string name="we_ve_put_together_most_popular_collection_so_you_can_find_and_enjoy_your_favourite">We’ve put together most popular collection so you can find and enjoy your favourite.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">welcome</string>
    <string name="title">title</string>
    <string name="skip">skip</string>
    <string name="home">Home</string>
    <string name="bookmark">bookmark</string>
    <string name="explorer">Explorer</string>
    <string name="collection">Collection</string>
    <string name="for_you">For you</string>
    <string name="learning">Learning</string>
    <string name="illustration">Illustration</string>
    <string name="image_save">The photo is saved</string>
    <string name="next">Next</string>
    <string name="permission_not_granted">permission_not_granted</string>
</resources>