<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".onboarding.BoardFragment">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:gravity="center"
        android:layout_marginHorizontal="10dp"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/splashscreen_text_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/inter"
        android:layout_marginTop="30dp"

        />

   <ImageView
       android:id="@+id/img"
       android:layout_width="200dp"
       android:layout_height="200dp"
       app:layout_constraintTop_toBottomOf="@id/tv_name"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="20dp"
       android:layout_marginStart="100dp"
       android:src="@drawable/splashscreenimage"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:textColor="@color/splashscreen_text_color"
        android:text="@string/welcome"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="140dp"
        android:text="@string/skip"
        app:cornerRadius="15dp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter"
        android:backgroundTint="@color/explorer_color_text"
        />

</androidx.constraintlayout.widget.ConstraintLayout>